--- a/Node/views/Community/Community-detail.html
+++ b/Node/views/Community/Community-detail.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="Community.css" />
+    <link rel="stylesheet" href="/Community.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Community-detail</title>
+    <link rel="stylesheet" href="Community-main.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
+    <!-- <div class="black-bg">
+      <div class="white-bg">
+        <h4>정말 삭제하시겠습니까?</h4>
+        <form action="success.html">
+          <div class="my-3">
+            <input type="text" class="form-control" id="email" />
+          </div>
+          <div class="my-3">
+            <input type="password" class="form-control" id="pw" />
+          </div>
+          <button type="submit" class="btn btn-primary" id="send">삭제</button>
+          <button type="button" class="btn btn-danger" id="close">닫기</button>
+        </form>
+      </div>
+    </div> -->
+
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap"
       rel="stylesheet"
@@ -31,102 +54,45 @@
         <td colspan="3">{{board.content}}</td>
       </tr>
     </table>
+    <!-- 회원 아이디랑 작성자 아이디랑 비교해서 버튼 보여주기 -->
+    <button
+      type="button"
+      onclick="location.href='/Community/{{board.post_id}}/update'"
+      style="cursor: hand"
+      class="btn"
+      method="delete"
+    >
+      수정
+    </button>
+    <button
+      type="button"
+      style="cursor: hand"
+      class="btn delete"
+      onclick="location.href='/Community/delete/{{board.post_id}}'"
+    >
+      삭제
+    </button>
 
-    <!-- <div>
-  <div class="title">
-    {{post.title}}
-  </div>
-  <div class="writer">
-    {{post.boarder}}
-  </div>
-  <div class="date">
-    {{post.date}}
-  </div>
-</div>
-<div>
-  <div class="content">
-    <p class="content_description">
-      {{post.content}}
-    </p>
-  </div>
-</div> -->
-    <!-- <table class="table table-hover" style="margin-top: 10vw; width: 80vw; " >
-      <thead>
-        <tr>
-            <th scope="col" style="width: 10vw;">번호</th>
-            <th scope="col" style="width: 40vw; text-align: center;">제목</th>
-            <th scope="col" style="width: 15vw;">글쓴이</th>
-            <th scope="col" style="width: 15vw">작성일</th>
-          </tr>
-        </thead>
-        <tbody> -->
-    <!-- {% include "./Community2.njk" %} -->
-    <!-- {% for item in boarders %}
-            <tr>
-              <td scope="row">{{item.post_id}}</td>
-              <td style="width: 40vw; text-align: center;">{{item.title}}</td>
-              <td>{{item.boarder}}</td>
-              <td>{{item.date}}</td>
-            </tr>
-          {% endfor %} -->
+    <script>
+      // $("#login-btn").on("click", function () {
+      //   $(".black-bg").addClass("show-modal");
+      // });
 
-    <!-- 추후 자바스크립트로 추가 구현 -->
-    <!-- 추후 맨위로가기 맨아래로가기 구현 -->
-    <!-- </section> -->
-    <!-- <footer>
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Fukuoka</th>
-            <th scope="col">Bulletin Board</th>
-            <th scope="col">Schedule</th>
-            <th scope="col">Groups</th>
-          </tr>
-        </thead>
-        <tbody id="tbody">
-          <tr>
-            <td><a href="">날씨</a></td>
-            <td><a href="">YungStargram</a></td>
-            <td><a href="">학교 일정</a></td>
-            <td><a href="">그룹톡</a></td>
-          </tr>
-          <tr>
-            <td><a href="">연혁</a></td>
-            <td><a href="">공지</a></td>
-            <td><a href="">개인 일정</a></td>
-            <td><a href="">비상연락처</a></td>
-          </tr>
-          <tr>
-            <td><a href="">관광지</a></td>
-            <td><a href=""></a></td>
-            <td><a href="">개인톡</a></td>
-            <td><a href=""></a></td>
-          </tr>
-          <tr>
-            <td><a href="">근처??</a></td>
-            <td><a href=""></a></td>
-            <td><a href=""></a></td>
-            <td><a href=""></a></td>
-          </tr>
-        </tbody>
-    </table>
-</footer> -->
+      // $("#close").on("click", function () {
+      //   $(".black-bg").removeClass("show-modal");
+      // });
+    </script>
 
-    <!-- <script>
-        const toggleBtn = document.querySelector('.fa-bars');
-        // const menu = document.querySelector('.navbar__menu');
-        
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
-        toggleBtn.addEventListener('click', () => {
-            menu.classList.toggle('active');
-            // sns.classList.toggle('active');
-        });
-        // toggleBtn.addEventListener('mouseover', () => {
-        //     toggleBtn.style.backgroundColor = 'blue';
-        // })
-        // toggleBtn.addEventListener('hover', () => {
-        //     toggleBtn.style.backgroundColor = 'blue';
-        // })
-    </script> -->
+    <script>
+      document.querySelector(".delete").addEventListener("click", function (e) {
+        axios.delete("/Community/delete/{{board.post_id}}");
+      });
+    </script>
   </body>
 </html>
