--- a/Node/views/Community/Community.html
+++ b/Node/views/Community/Community.html
@@ -74,7 +74,7 @@
 </div>
 </nav> -->
     {% include "../nav.html" %}
-    <button type="button" class="btn btn-success">Success</button>
+    <!-- <button type="button" class="btn btn-success">Success</button> -->
     <table class="table table-hover" style="margin-top: 10vw; width: 80vw">
       <thead>
         <tr>
