finish community without design and ID classfication

--- a/Node/views/Community/Community-add.html
+++ b/Node/views/Community/Community-add.html
@@ -38,11 +38,10 @@
           </tr>
           <tr>
             <td>
-              <input
-                type="text"
+              <textarea
                 name="inputContent"
                 placeholder="내용을 입력하세요."
-              />
+              ></textarea>
             </td>
           </tr>
         </table>
