--- a/Node/views/nav.html
+++ b/Node/views/nav.html
@@ -27,7 +27,7 @@
           <div class="dropdown1-menu">Bulletin Board</div>
           <div class="dropdown1-content">
               <a href="#">YungStagram</a>
-              <a href="#">공지</a>
+              <a href="/Notice">공지</a>
               <a href="/Community">커뮤니티</a>
               <a href="#"></a>
           </div>
