--- a/Node/views/Notice/notice.html
+++ b/Node/views/Notice/notice.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Notice</title>
     <link rel="stylesheet" href="notice.css" />
     <link rel="stylesheet" href="bootstrap.css" />
   </head>
   <body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap"
+      rel="stylesheet"
+    />
     {% include "../nav.html" %}
     <h1 style="text-align: center">공지사항</h1>
     <div class="container">
