finish community design and subtract grade where login

--- a/Node/views/Register/signup.html
+++ b/Node/views/Register/signup.html
@@ -33,10 +33,10 @@
                     <input type="text" name="tel" id="tel   " autocomplete="off" required>
                     <label for="name">TEL</label>
                 </div>
-                <div class="int-area">
+                <!-- <div class="int-area">
                     <input type="text" name="grade" id="grade" autocomplete="off" required>
                     <label for="name">grade</label>
-                </div>
+                </div> -->
                 <div class="int-area" id="int2-area" >
                     <input type="text" name="email" id="email" placeholder=""autocomplete="off" required>
                     <label for="name">E-mail</label>
