--- a/Node/views/Community/Community-add.html
+++ b/Node/views/Community/Community-add.html
@@ -1,79 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="Community.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community-add</title>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <div>{% include "../nav.html" %}</div>
-    <section>
-      <form action="/Community" method="POST">
-        <table style="margin-top: 10vw; width: 80vw">
-          <tr>
-            <td>
-              <input
-                type="text"
-                name="inputTitle"
-                placeholder="제목을 입력하세요."
-              />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input
-                type="text"
-                name="inputWriter"
-                placeholder="작성자 ID"
-                value="{{user.id}}"
-                readonly
-              />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <textarea
-                name="inputContent"
-                placeholder="내용을 입력하세요."
-              ></textarea>
-            </td>
-          </tr>
-        </table>
-        <input type="submit" value="저장" />
-      </form>
-    </section>
+<html>
 
-    <!-- 추후 자바스크립트로 추가 구현 -->
-    <!-- 추후 맨위로가기 맨아래로가기 구현 -->
+<head>
+  <link rel="stylesheet" href="Community.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Community-add</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- <script>
-        const toggleBtn = document.querySelector('.fa-bars');
-        // const menu = document.querySelector('.navbar__menu');
-        
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</head>
 
-        toggleBtn.addEventListener('click', () => {
-            menu.classList.toggle('active');
-            // sns.classList.toggle('active');
-        });
-        // toggleBtn.addEventListener('mouseover', () => {
-        //     toggleBtn.style.backgroundColor = 'blue';
-        // })
-        // toggleBtn.addEventListener('hover', () => {
-        //     toggleBtn.style.backgroundColor = 'blue';
-        // })
-    </script> -->
-  </body>
+<body>
+  {% include "../nav.html" %}
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet" />
+  <form action="/Community" method="POST">
+    <div class="container" style="margin-top: 20vh;">
+      <h2>게시판 글쓰기</h2>
+      <div class="form-group">
+        <label for="writer">작성자</label>
+        </br>
+        <input type="text" name="inputWriter" placeholder="작성자 ID" value="{{user.id}}" readonly />
+      </div>
+      <div class="form-group">
+        <label for="title">제목</label>
+        <input type="text" class="form-control" id="title" placeholder="제목 입력(4-100)" name="inputTitle" maxlength="100"
+          required="required" pattern=".{4,100}">
+      </div>
+      <div class="form-group">
+        <label for="content">내용</label>
+    
+        <textarea class="form-control" rows="5" id="content" name="inputContent" placeholder="내용 작성"></textarea>
+      </div>
+      <button type="submit" class="btn btn-default" value="저장">저장</button>
+  </form>
+  </div>
+</body>
+
 </html>
