--- a/Node/views/Community/Community.html
+++ b/Node/views/Community/Community.html
@@ -76,7 +76,8 @@
 </nav> -->
     {% include "../nav.html" %}
     <!-- <button type="button" class="btn btn-success">Success</button> -->
-    <table class="table table-hover" style="margin-top: 10vw; width: 80vw">
+    <h1 style="margin-top: 50px">Community</h1>
+    <table class="table table-hover" style="margin-top: 0vw; width: 80vw">
       <thead>
         <tr>
           <th scope="col" style="width: 10vw">번호</th>
