--- a/Node/views/nav.html
+++ b/Node/views/nav.html
@@ -26,7 +26,8 @@
             <div class="dropdown1-menu">Bulletin Board</div>
             <div class="dropdown1-content">
                 <a class ='aTag' href="#">YungStagram</a>
-                <a class ='aTag' href="#">공지</a>
+                <a class ='aTag' href="/Faq">FAQ</a>
+                <a class ='aTag' href="/Notice">공지</a>
                 <a class ='aTag' href="/Community">커뮤니티</a>
                 <a class ='aTag' href="#"></a>
             </div>
