finish FAQ CRUD

--- a/Node/views/Faq/faq-add.html
+++ b/Node/views/Faq/faq-add.html
@@ -73,7 +73,7 @@
 
         if (userGrade != 3) {
           alert("당신은 권한이 없어요!!");
-          window.location.href = `/Notice`;
+          window.location.href = `/Faq`;
         }
       };
     </script>
