fix notice error

--- a/Node/views/Notice/notice-detail.html
+++ b/Node/views/Notice/notice-detail.html
@@ -32,7 +32,7 @@
           <tr>
             <th scope="col">{{notice.title}}</th>
             <th scope="col">{{notice.noticer}}</th>
-            <th scope="col" , id="dateVal">{{notice.date}}</th>
+            <th scope="col" id="dateVal">{{notice.date}}</th>
           </tr>
         </thead>
       </table>
@@ -52,8 +52,6 @@
           </th>
         </tr>
       </table>
-      <!-- {{if user.grade !== 3}}
-			{{else}} -->
       <div
         class="buttons"
         style="float: right; padding-right: 20vw; margin-bottom: 50px"
@@ -66,7 +64,7 @@
         </button>
       </div>
     </div>
-    {{endif}}
+
     <!-- <div style="display: flex; !! 댓글 필요 없음 !!
   justify-content : center; margin: auto; width : 80vw">
   <table class='table' >
@@ -103,7 +101,6 @@
         </form>
       </tr>
     </tbody>
-
   </table>
   </div> -->
 
